Revert "amend titles in html and up make file publisher version"
This reverts commit 18a63135a7d5f080b7ba40b977e34193e372578e.

--- a/source/documentation/principles/development-principles.html.md.erb
+++ b/source/documentation/principles/development-principles.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# Development Principles
+# <%= current_page.data.title %>
 
 These principles are stated in no particular order, and are *always* open to debate.
 All development is a trade-off between competing pressures, these principles are
