--- a/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
+++ b/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-12-20
 review_in: 3 months
 ---
 
-# Documenting owners of infrastructure
+# <%= current_page.data.title %>
 
 All of your infrastructure resources should be tagged with details of their owners, what service they are part of, and what type of environment they are in.
 
