--- a/source/documentation/standards/licencing-software-or-code.html.md.erb
+++ b/source/documentation/standards/licencing-software-or-code.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# Licensing software or code
+# <%= current_page.data.title %>
 
 Everything we produce or use, whether open or closed, should have an
 appropriate licence applied (as [indicated by the service
