--- a/source/documentation/standards/naming-things.html.md.erb
+++ b/source/documentation/standards/naming-things.html.md.erb
@@ -3,7 +3,7 @@ title: Naming things
 last_reviewed_on: 2022-02-01
 review_in: 3 months
 ---
-# Naming things
+# <%= current_page.data.title %>
 
 ## User needs
 
