--- a/source/documentation/standards/reserving-infrastructure-capacity.html.md.erb
+++ b/source/documentation/standards/reserving-infrastructure-capacity.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# Reserving infrastructure capacity
+# <%= current_page.data.title %>
 
 To get the best value for money from cloud infrastructure, we should
 pay in advance for parts of it that are going to be in active use over
