--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2022-01-20
 review_in: 3 months
 ---
 
-# Storing source code
+# <%= current_page.data.title %>
 
 All our source code is open by default, and stored on well-known,
 public code hosting services. At the MOJ, we use GitHub.
