--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# Frontend Development Principles
+# <%= current_page.data.title %>
 
 This document lists some principles that developers at MOJ are strongly
 encouraged to follow when implementing a service’s frontend. These principles
