--- a/source/documentation/standards/using-3rd-party-open-source-products.html.md.erb
+++ b/source/documentation/standards/using-3rd-party-open-source-products.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# Using 3rd-party open source products
+# <%= current_page.data.title %>
 
 In order to make effective commercial decisions, it is important to recognise
 the characteristics of open source software that we find desirable. These
