--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -49,6 +49,14 @@ delivery team's GitHub repositories in one place, by setting up a GitHub team
 for the people on a delivery team, and giving that GitHub team read/write
 privileges for the repos.
 
+### Converting private or internal repositories to public
+
+If you are in a position to make source code open to the public after it was kept private for a while, you need to make sure there is no sensitive data in the commit history. This does not apply just to the current state of the main branch, but to all commits in the history if the repository. A good place to start is by going to the Security tab in the repository and checking for any secrets that may have been committed at any point. 
+
+If you do find sensitive information has been committed, you need to cycle it out of use and then [scrub your git history](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository) to remove it. It is very important that you cycle the credentials, because even after scrubbing, they will still be present in any cached and local copies and will still be vulnerable.
+
+In case any user information has been committed, you need to talk to the security and data privacy teams before proceeding. 
+
 ### GitHub access
 
 #### Your account
