Use tech-doc-publisher v3 and fix broken links. Code format files.

--- a/source/documentation/guides/using-git.html.md.erb
+++ b/source/documentation/guides/using-git.html.md.erb
@@ -24,7 +24,7 @@ In git, that problem goes away.
 
 ## Tutorials
 
-* [https://try.github.io/](https://try.github.io/)
+* [GitHub Hello World](https://docs.github.com/en/get-started/quickstart/hello-world)
 * [https://www.atlassian.com/git/tutorials](https://www.atlassian.com/git/tutorials)
 
 ## How-to
@@ -48,7 +48,7 @@ for continuous integration. Naming branches such as `feature/foo`,
 understand whether it's a feature (new behaviour) or a fixing a bug. Having a
 common prefix can also work well with continuous integration tools such as
 [Travis][travis], which might be
-[instructed to only do certain actions on branches](https://docs.travis-ci.com/user/customizing-the-build/#Using-regular-expressions)
+[instructed to only do certain actions on branches](https://docs.travis-ci.com/user/customizing-the-build#using-regular-expressions)
 named `feature/*` versus the `master` branch.
 
 Other approaches:
@@ -79,7 +79,7 @@ This protects you from local hardware failure, and
 ### Request a review
 
 Once you have got to the point where you consider the change complete, you
-should [open a pull request on GitHub](https://help.github.com/articles/creating-a-pull-request/),
+should [open a pull request on GitHub](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request),
 asking for the changes to be reviewed by someone else on the team.
 
 ### Review pull requests
@@ -96,7 +96,7 @@ you'll probably want to pull the code and try it out for yourself.
 
 * [Anna Shipman][anna]'s description of [how to create good pull requests](https://www.annashipman.co.uk/jfdi/good-pull-requests.html)
 * [Alice Bartlett][alice] wrote
-  [a very honest account of her experience moving to coding in the open and using GitHub](http://alicebartlett.co.uk/blog/six-months-at-gds). She also did
+  [a very honest account of her experience moving to coding in the open and using GitHub](https://alicebartlett.co.uk/blog/six-months-at-gds). She also did
   [a nice talk introducing Git for non-technical folk](https://www.youtube.com/watch?v=eWxxfttcMts)
 * [Why we care about commit messages](https://github.com/alphagov/styleguides/blob/master/git.md#commit-messages).
   Commit messages live longer than pull requests
