--- a/source/documentation/principles/development-principles.html.md.erb
+++ b/source/documentation/principles/development-principles.html.md.erb
@@ -22,7 +22,7 @@ code if you really have to.
 
 If you have knowledge which is unique to you, it is your responsibility to share it.
 
-We follow '[github flow](https://guides.github.com/introduction/flow/)', to keep branches small and short-lived, and ensure knowledge is shared.
+We follow '[github flow](https://docs.github.com/en/get-started/quickstart/github-flow)', to keep branches small and short-lived, and ensure knowledge is shared.
 If you produce something reusable, package it (e.g. with [PyPI](https://pypi.org) or [rubygems](https://rubygems.org)) & share it with others on [MoJ Reuseables]( https://github.com/ministryofjustice/moj-reusables).
 
 All non-throwaway code should be reviewed - no-one is 100% right, 100% of the time... Be aware that 'throwaway' code has a nasty habit of sticking around.
