--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -25,12 +25,12 @@ MOJ-specific recommendations.
 Your site must be compliant with level AA of the [Web Content Accessibility Guidelines 2.0](https://www.w3.org/WAI/intro/wcag). You should also try assistive
 technology tools as much as you can. However that’ll be far from giving you a
 complete view of the issues your service might have. With a bit of luck to will
-be assessed by proper accessibility experts (like the [Digital Accessibility Centre](http://www.digitalaccessibilitycentre.org/)). But don’t wait for it to
+be assessed by proper accessibility experts (like the [Digital Accessibility Centre](https://www.digitalaccessibilitycentre.org/)). But don’t wait for it to
 happen to implement accessibility principles. Another helpful thing to do is
 automatic accessibility testing as part of your continuous integration.
 
 - [pa11y](https://github.com/springernature/pa11y)
-- [Automated Accessibility Testing in Rails with capybara-accessible](https://content.pivotal.io/blog/automated-accessibility-testing-in-rails-with-capybara-accessible)
+- Automated Accessibility Testing in Rails with capybara-accessible: `https://blogs.vmware.com/vsphere/2012/03/creating-custom-metadata-using-the-vcloud-api.html`
 
 ## 3. Make it easy to change your code for copy and translation
 All the user-facing text in your application should be in the same place in the
@@ -40,9 +40,9 @@ application’s copy. Also make sure your service is easy to translate in anothe
 language.
 
 ## 4. Support as many browsers as possible
-Your site is expected to work on all the browsers listed in the [Verified Browsers](https://www.gov.uk/service-manual/user-centred-design/browsers-and-devices.html#verified-browsers) page in the service manual, but try to include as many browsers as
+Your site is expected to work on all the browsers listed in the [Verified Browsers](https://www.gov.uk/service-manual/user-centred-design/browsers-and-devices.html) page in the service manual, but try to include as many browsers as
 possible on top of that list. A browser with 0.1% market share accounts for
-50,000 visitors a month on GOV.UK. Avoid [browser sniffing](http://www.sitepoint.com/why-browser-sniffing-stinks/). Instead, use
+50,000 visitors a month on GOV.UK. Avoid [browser sniffing](https://www.sitepoint.com/why-browser-sniffing-stinks/). Instead, use
 feature detection. That will also result in your site being forwards compatible.
 
 ## 5. Use responsive design
