--- a/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
+++ b/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
@@ -109,7 +109,7 @@ use the correct DKIM records supplied by your email provider (AWS SES,
 SendGrid, etc).
 
 If your domain does not accept email, you must set a [NULL MX Resource Record]
-(https://tools.ietf.org/id/draft-delany-nullmx-02.html#rfc.section.4), such
+(https://datatracker.ietf.org/doc/rfc7505/), such
 as:
 
 | Name/host/alias | Time to live | Record type | Priority | Value |
