--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -64,9 +64,9 @@ In case any user information has been committed, you need to talk to the securit
 If you already have a GitHub account from before you joined MOJ, you can choose to use it at MOJ or create a new one. Some people prefer to have continuity with previous work; others value the separation.
 
 You must [add your MOJ email address to your
-account](https://help.github.com/articles/adding-an-email-address-to-your-github-account/).
+account](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account).
 It doesn't matter if it's the 'primary email' or not and it's ok to make it private.
-You may want to [use that email for notifications](https://help.github.com/articles/managing-notification-emails-for-organizations/).
+You may want to [use that email for notifications](https://docs.github.com/en/account-and-profile/managing-subscriptions-and-notifications-on-github/setting-up-notifications/configuring-notifications#choosing-where-your-organizations-email-notifications-are-sent).
 
 In preparation for when you leave MoJ, it's suggested you add a home email
 address to your account as the 'backup email'. The reason is that the account is
