use alternative MIT license link

--- a/source/documentation/standards/licencing-software-or-code.html.md.erb
+++ b/source/documentation/standards/licencing-software-or-code.html.md.erb
@@ -13,7 +13,7 @@ manual][service manual licencing]). Without a licence, others (even
 within the MOJ) have no way of knowing for sure if they can use it, or
 how.
 
-At the MOJ, we use the [MIT License](https://opensource.org/licenses/MIT).
+At the MOJ, we use the [MIT License](https://choosealicense.com/licenses/mit/).
 
 [service manual licencing]: https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable#licensing-your-code
 
