--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -65,7 +65,7 @@ If you already have a GitHub account from before you joined MOJ, you can choose 
 
 You must [add your MOJ email address to your
 account](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account).
-It doesn't matter if it's the 'primary email' or not and it's ok to make it private.
+It needs to be the 'primary email' address on the account to enable SSO onto other developer related tooling.
 You may want to [use that email for notifications](https://docs.github.com/en/account-and-profile/managing-subscriptions-and-notifications-on-github/setting-up-notifications/configuring-notifications#choosing-where-your-organizations-email-notifications-are-sent).
 
 In preparation for when you leave MoJ, it's suggested you add a home email
@@ -84,11 +84,8 @@ your username.
 #### Member of the MoJ organisation
 
 Being a **member** of the MoJ organisation is for staff who are permanent employees or contractors working directly with the MoJ.
-
 To be added to the `ministryofjustice` organisation, first ensure you've enabled two-factor authentication.
-Then make a request on ServiceNow:
-[GitHub for D&T staff - Add/Remove](https://mojprod.service-now.com/moj_sp?id=sc_cat_item&sys_id=5beac6f7dbdc609050fbbfce3b96191f)
-(or ask a member of the webops team).
+Then make a request to the operations-engineering team to be added / removed via [email](operations-engineering@digital.justice.gov.uk) or the [#ask-operations-engineering](https://mojdt.slack.com/archives/C01BUKJSZD4).
 
 #### Outside Collaborator
 
