--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -85,7 +85,7 @@ your username.
 
 Being a **member** of the MoJ organisation is for staff who are permanent employees or contractors working directly with the MoJ.
 To be added to the `ministryofjustice` organisation, first ensure you've enabled two-factor authentication.
-Then make a request to the operations-engineering team to be added / removed via [email](operations-engineering@digital.justice.gov.uk) or the [#ask-operations-engineering](https://mojdt.slack.com/archives/C01BUKJSZD4).
+Then make a request to the operations-engineering team to be added / removed via [email](mailto:operations-engineering@digital.justice.gov.uk) or the [#ask-operations-engineering](https://mojdt.slack.com/archives/C01BUKJSZD4).
 
 #### Outside Collaborator
 
