--- a/source/documentation/guides/using-git.html.md.erb
+++ b/source/documentation/guides/using-git.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Using Git
-last_reviewed_on: 2023-02-24
+last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
@@ -49,7 +49,7 @@ understand whether it's a feature (new behaviour) or a fixing a bug. Having a
 common prefix can also work well with continuous integration tools such as
 [Travis][travis], which might be
 [instructed to only do certain actions on branches](https://docs.travis-ci.com/user/customizing-the-build#using-regular-expressions)
-named `feature/*` versus the `master` branch.
+named `feature/*` versus the `main` branch.
 
 Other approaches:
 
