--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -1,11 +1,11 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Frontend Development Principles
-last_reviewed_on: 2023-02-24
+last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# <%= current_page.data.title %>e
 
 This document lists some principles that developers at MOJ are strongly
 encouraged to follow when implementing a service’s frontend. These principles
