--- a/source/documentation/principles/development-principles.html.md.erb
+++ b/source/documentation/principles/development-principles.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Development Principles
-last_reviewed_on: 2023-02-24
+last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
@@ -23,7 +23,7 @@ code if you really have to.
 If you have knowledge which is unique to you, it is your responsibility to share it.
 
 We follow '[github flow](https://docs.github.com/en/get-started/quickstart/github-flow)', to keep branches small and short-lived, and ensure knowledge is shared.
-If you produce something reusable, package it (e.g. with [PyPI](https://pypi.org) or [rubygems](https://rubygems.org)) & share it with others on [MoJ Reuseables]( https://github.com/ministryofjustice/moj-reusables).
+If you produce something reusable, package it (e.g. with [PyPI](https://pypi.org) or [rubygems](https://rubygems.org)) & share it with others on [MoJ Reuseables]( https://github.com/ministryofjustice/moj-reusables). The repository is archived but can be unarchived to add new items by contacting the operations-engineering team on their slack channel #ask-operations-engineering.
 
 All non-throwaway code should be reviewed - no-one is 100% right, 100% of the time... Be aware that 'throwaway' code has a nasty habit of sticking around.
 
