--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -5,7 +5,7 @@ last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>e
+# <%= current_page.data.title %>
 
 This document lists some principles that developers at MOJ are strongly
 encouraged to follow when implementing a service’s frontend. These principles
