--- a/source/documentation/standards/licencing-software-or-code.html.md.erb
+++ b/source/documentation/standards/licencing-software-or-code.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Licensing software or code
-last_reviewed_on: 2023-02-24
+last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
@@ -44,7 +44,7 @@ shown as a period from first to most recent update (e.g. 2015-2017).
 
 ### Example
 
-`repo-audit` has a good [example of our licence](https://github.com/ministryofjustice/template-repository/blob/main/LICENSE).
+This is an [example of our licence](https://github.com/ministryofjustice/template-repository/blob/main/LICENSE).
 
 ## Reusing or incorporating others' work
 
