--- a/source/documentation/standards/out-of-hours.html.md.erb
+++ b/source/documentation/standards/out-of-hours.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Supporting services out of hours
-last_reviewed_on: 2023-02-24
+last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
@@ -61,7 +61,7 @@ To avoid that, a few core criteria must be met:
 
 ### Contacting people on call about an issue
 
-To allow people to manage how they are contacted when on call, the MOJ uses <a href="https://www.pagerduty.com" data-proofer-ignore>PagerDuty</a>. PagerDuty (and systems like it) allows people on call to specify how they prefer to be contacted (in-app notifications, phone calls, text messages) and when, relative to an incident being raised. It also ensures that the people on call are paged according to pre-defined escalation policies (primary first, then secondary, then repeat).
+To allow people to manage how they are contacted when on call, the MOJ uses <a href="https://www.pagerduty.com" data-proofer-ignore>PagerDuty</a>. PagerDuty (and systems like it) allows people on call to specify how they prefer to be contacted (in-app notifications, phone calls, text messages) and when, relative to an incident being raised. It also ensures that the people on call are paged according to pre-defined escalation policies (primary first, then secondary, then repeat). To get access to PagerDuty or a similar tool contact the operations-engineering team on their slack channel #ask-operations-engineering.
 
 People on call should *never* be contacted directly to report issues, especially not through their personal phone number. Contacting individuals directly creates a dependency on them, making them implicitly on call 100% of the time. This is not good for individuals' mental health, and can result in them withdrawing entirely from support or even leaving the organisation, meaning we entirely lose their knowledge and skill at supporting the system, rather than allowing others to learn from it and them to work at a sustainable level.
 
