--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Storing source code
-last_reviewed_on: 2023-02-24
+last_reviewed_on: 2023-05-24
 review_in: 3 months
 ---
 
@@ -91,11 +91,13 @@ Then make a request to the operations-engineering team to be added / removed via
 
 Being an **outside collaborator** is for third party suppliers who are maintaining code on behalf of the MoJ.
 
-Outside collaborators can only access specific repositories and are limited in what they can do within the MoJ organisation. They are not able to access private repositories outside of the ones they've been assigned to. They do not have access to the Cloud Platform cluster.
+Outside collaborators can only access specific repositories and are limited in what they can do within the MoJ organisation. They are not able to access private repositories outside of the ones they've been assigned to. They do not have access to the Cloud Platform cluster. Collaborators cannot be added to GitHub teams.
 
 Users do not require an MoJ email address to be added as outside collaborators.
 
-You can add outside collaborators using the [github-collaborators] tool.
+You can add outside collaborators via the [github-collaborators] repository.
+
+The operations-engineering team track Outside Collaborators on the MoJ GitHub Organisation via the [github-collaborators] repository.
 
 [template repository]: https://github.com/ministryofjustice/template-repository
 [github actions]: https://github.com/ministryofjustice/github-actions
