Make #hosting the owner of code freeze policy

--- a/source/documentation/standards/code-freezes.html.md.erb
+++ b/source/documentation/standards/code-freezes.html.md.erb
@@ -1,7 +1,7 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#hosting"
 title: Avoid code freezes
-last_reviewed_on: 2023-06-19
+last_reviewed_on: 2023-06-28
 review_in: 3 months
 ---
 
