--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -25,6 +25,7 @@ which covers service design more broadly.
 
 ### Operating services
 
+* [Avoiding code freezes](documentation/standards/code-freezes.html)
 * [Documenting how your service is supported](documentation/standards/documenting-how-your-service-is-supported.html)
 * [Documenting owners of infrastructure](documentation/standards/documenting-infrastructure-owners.html)
 * [How to host services](documentation/standards/hosting.html)
