Clarify that code freezes can require new process
… but they don't always: there might already be one, and the team might be familiar with it.

Co-authored-by: Jake Mulley <jakemulley@users.noreply.github.com>

--- a/source/documentation/standards/code-freezes.html.md.erb
+++ b/source/documentation/standards/code-freezes.html.md.erb
@@ -38,7 +38,7 @@ primarily automated.
 Even during a code freeze, however, incidents can happen that are out of
 everyone's control, and that cannot be resolved without making changes.
 
-Code freezes introduce a new process with which the team aren't
+Code freezes can introduce a new process with which the team may not be
 familiar. Using an unfamiliar process, even a well-documented one, is
 likely to result in the team making mistakes. If this process needs to
 be enacted during an incident—an already high-pressure situation, often
