More clearly require automation over code freeze

--- a/source/documentation/standards/code-freezes.html.md.erb
+++ b/source/documentation/standards/code-freezes.html.md.erb
@@ -32,8 +32,7 @@ In a team's day-to-day work, they will use a standard process for
 releasing changes to their systems. If they make changes regularly ([as
 they should](https://www.gov.uk/service-manual/technology/deploying-software-regularly)),
 they will be practiced experts in their normal processes. These
-processes will likely be well documented, well tested, and ideally
-primarily automated.
+processes will likely be well documented, well tested, and automated.
 
 Even during a code freeze, however, incidents can happen that are out of
 everyone's control, and that cannot be resolved without making changes.
@@ -96,7 +95,7 @@ their connections, creating a growing sphere of increased risk around
 the system undergoing a change freeze.
 
 Change freezes often cannot be applied to certain systems, however: for
-example, many suppliers practices and contracts are such that they do
+example, many suppliers' practices and contracts are such that they do
 not follow requested change freezes. Typically, this is because they
 cannot accept the risks described above impacting other users of their
 systems, especially in cloud-hosted or other multi-tenant environments.
