Document that smaller changes are easier to revert

--- a/source/documentation/standards/code-freezes.html.md.erb
+++ b/source/documentation/standards/code-freezes.html.md.erb
@@ -32,7 +32,8 @@ In a team's day-to-day work, they will use a standard process for
 releasing changes to their systems. If they make changes regularly ([as
 they should](https://www.gov.uk/service-manual/technology/deploying-software-regularly)),
 they will be practiced experts in their normal processes. These
-processes will likely be well documented, well tested, and automated.
+processes will likely be well documented, well tested, automated, and
+easily reverted.
 
 Even during a code freeze, however, incidents can happen that are out of
 everyone's control, and that cannot be resolved without making changes.
