--- a/source/documentation/standards/naming-domains.html.md.erb
+++ b/source/documentation/standards/naming-domains.html.md.erb
@@ -101,7 +101,7 @@ GOV.UK publishing apps do this, for example compare GOV.UK Signon in their
 
 ## Welsh language versions of sites and domain naming
 
-Services funded by the Welsh Government can [apply for a .llyw.cymru and .gov.wales](https://gov.wales/register-and-manage-domains-llywcymru-and-govwales) domain. This doesn't apply to most services using `*.service.justice.gov.uk` or `*.justice.gov.uk` domains.
+Services funded by the Welsh Government can [apply for a .llyw.cymru and .gov.wales](https://www.gov.wales/register-and-manage-llywcymru-and-govwales-domains) domain. This doesn't apply to most services using `*.service.justice.gov.uk` or `*.justice.gov.uk` domains.
 
 If you are hosting a Welsh language version of your service you would still use your current registered domain. Any Welsh language pages should be handled at an application level, rather than having Welsh language in the domain name.
 
