♻️Refactor Modernisation Platform wording to bring it up to date

--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -47,17 +47,16 @@ and get in touch with the Cloud Platform team if you need help.
 ## Modernisation Platform
 
 The Modernisation Platform is a cloud-first hosting platform for legacy
-applications. It's currently in development, and you can become an early
-adopter by following the [Modernisation Platform user guide]
+applications. You can start hosting your applications on the Modernisation Platform by following the [Modernisation Platform user guide]
 (https://user-guide.modernisation-platform.service.justice.gov.uk/#modernisation-platform).
 
-- It will make it easy to create non-Kubernetes environments for applications
-- It will align with the MOJ [Security Guidance]
+- It makes it easy to create non-Kubernetes environments for applications
+- It aligns with the MOJ [Security Guidance]
   (https://security-guidance.service.justice.gov.uk/baseline-aws-accounts/#baseline-for-amazon-web-services-accounts)
-- It will standardise commonalities across applications, such as: application
+- It standardises commonalities across applications, such as: application
   networking, certificate management, CI/CD processes; with infrastructure as
   code
-- It will support you modernising your applications
+- It supports you modernising your applications
 
 ## Other hosting infrastructure
 
