Fix text wrapping

--- a/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
+++ b/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
@@ -28,7 +28,7 @@ To ensure we can consistently search for, and report on, the tags we use, you sh
 - `business-unit`: Should be one of `HQ`, `HMPPS`, `OPG`, `LAA`, `HMCTS`, `CICA`, or `Platforms` (for use by Platforms & Architecture team). If none of these are appropriate, use an appropriate name for the area of the MOJ responsible for the service.
 - `application`: Should be the full name of the application or service (and acronym version, if commonly used), e.g. `Prison Visits Booking`, `Claim for Crown Court Defence/CCCD`.
 - `is-production`: `true` or `false`, to indicate if the infrastructure is part of, or supports, live production services
-- `owner`: The team responsible for the overall service. Should be of the form `<team-name>: <team-email>`.
+- `owner`: Should be of the form `<team-name>: <team-email>`. This is the team responsible for the overall service.
 
 ### Optional
 
