--- a/source/documentation/standards/using-inclusive-language.html.md.erb
+++ b/source/documentation/standards/using-inclusive-language.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Using inclusive language
-last_reviewed_on: 2023-08-24
+last_reviewed_on: 2023-10-20
 review_in: 3 months
 ---
 
@@ -23,7 +23,7 @@ The table below provides guidance for replacing offensive and outdated phrases w
 | enable | activate _or_ turn on |
 | girls (group) | team _or_ people |
 | grandfather | legacy |
-| grayhat hacker | hacktivist |
+| greyhat hacker | hacktivist |
 | guys (group) | team _or_ people |
 | housekeeping | cleanup or maintenance |
 | man hours | person hours/people hours |
@@ -37,7 +37,7 @@ The table below provides guidance for replacing offensive and outdated phrases w
 | pronouns when you don't know someone's | they, them, theirs _or_ ask them |
 | red team | cyber offence team |
 | scrum master | scrum coach |
-| webmaster | web product owner |
+| webmaster | web administrator |
 | white team | cyber exercise team |
 | whitebox | open box |
 | whitehat hacker | ethical hacker |
