Remove version specific text
This has the potential to create a maintenance overhead. Text removed and content now references where latest version of guidance can be found.

--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -23,7 +23,7 @@ MOJ-specific recommendations.
 
 ## 2. Make your service accessible
 
-In the UK, the [Public Sector Bodies Accessibility Regulations](https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps) mean we are legally required to make sure our digital services meet level AA of the latest version of the [Web Content Accessibility Guidelines](https://www.w3.org/TR/WCAG22/). The latest version of these guidelines is 2.2, which was released in October 2023.
+In the UK, the [Public Sector Bodies Accessibility Regulations](https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps) mean we are legally required to make sure our digital services meet level AA of the latest version of the [Web Content Accessibility Guidelines](https://www.w3.org/TR/WCAG22/).
 
 You should make efforts to ensure what you are designing and developing is accessible as you go, rather than waiting until the end to think about and test for accessibility.
 
