--- a/source/documentation/principles/frontend-development-principles.html.md.erb
+++ b/source/documentation/principles/frontend-development-principles.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Frontend Development Principles
-last_reviewed_on: 2024-03-25
+last_reviewed_on: 2024-04-16
 review_in: 1 months
 ---
 
@@ -162,7 +162,7 @@ When writing your code, you’ll be checking your results and debugging them in
 your favourite browser. Make sure you also check on the most common browsers.
 You may find that Firefox is best for debugging, but don’t forget to check
 Chrome and IE as often as possible. Use [browsersync](https://www.browsersync.io/)
-to try multiple browsers at once and use virtual machines for old browsers (eg. [modern.ie](https://dev.windows.com/en-us/microsoft-edge/tools/vms/))
+to try multiple browsers at once and use [virtual machines for old browsers](https://learn.microsoft.com/en-us/microsoft-edge/devtools-guide-chromium/device-mode/testing-other-browsers).
 
 ## 15. Implement SEO and semantic markup
 Apart from internal sites and ones that are on service.gov.uk (which should block
