Add section of tax and support costs

--- a/source/documentation/standards/reserving-infrastructure-capacity.html.md.erb
+++ b/source/documentation/standards/reserving-infrastructure-capacity.html.md.erb
@@ -70,6 +70,10 @@ Non-production **infrastructure that is too difficult (or costly) to
 make able to be switched off out of hours may be considered for
 reservation** if it is expected to be required long term.
 
+### Implications on Tax and Support costs
+
+You should be aware that any commitments will also potentially cause spikes in Tax and Support costs. Commitments are treated as usage so will incur Tax and will impact Support, which is also based on usage. You should factor this into any decisions and be aware when it comes to understanding the bill.
+
 ### Don't use reserved instances to guarantee capacity
 
 While it's appealing to reserve capacity to ensure the provider
