Fix broken link

--- a/source/documentation/standards/documenting-how-your-service-is-supported.html.md.erb
+++ b/source/documentation/standards/documenting-how-your-service-is-supported.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Documenting how your service is supported
-last_reviewed_on: 2024-12-09
+last_reviewed_on: 2025-07-10
 review_in: 3 months
 ---
 
@@ -39,6 +39,6 @@ To ensure that people looking at your runbook can get the information they need 
 
 ## Where to publish your service's runbook
 
-Your service's runbook doesn't need to be hosted in a central repository, but you should make sure that all your stakeholders and peers are aware of how to find it and link to it from [your infrastructure tags](documenting-infrastructure-owners.html#optional) so that people supporting your service's infrastructure can find it if they need to.
+Your service's runbook doesn't need to be hosted in a central repository, but you should make sure that all your stakeholders and peers are aware of how to find it and link to it from [your infrastructure tags](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/finops-and-greenops-at-moj/standards/tagging.html#optional) so that people supporting your service's infrastructure can find it if they need to.
 
 You should also make sure that anyone who is likely to need to access your runbook *can* access it. The easiest way to do this is to [publish it openly](https://www.gov.uk/guidance/government-design-principles#make-things-open-it-makes-things-better) on the internet, but your service may have security constraints that mean that isn't possible at the moment.
