Fix broken link

--- a/source/documentation/standards/documenting-how-your-service-is-supported.html.md.erb
+++ b/source/documentation/standards/documenting-how-your-service-is-supported.html.md.erb
@@ -27,7 +27,7 @@ To ensure that people looking at your runbook can get the information they need 
 
 ### Optional
 
-- **Other URLs**: If you can, provide links to the service's monitoring dashboard(s), health checks, documentation (ideally describing how to run/work with the service), and [main GitHub repository](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html).
+- **Other URLs**: If you can, provide links to the service's monitoring dashboard(s), health checks, documentation (ideally describing how to run/work with the service), and [main GitHub repository](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html).
 - **Expected speed and frequency of releases**: How often are you able to release changes to your service, and how long do those changes take?
 - **Automatic alerts**: List, briefly, problems (or types of problem) that will automatically alert your team when they occur.
 - **Impact of an outage**: A short description of the risks if your service is down for an extended period of time.
