add ai governance document

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -19,6 +19,9 @@ which covers service design more broadly.
 * [Development Principles](documentation/principles/development-principles.html)
 * [Frontend Development Principles](documentation/principles/frontend-development-principles.html)
 
+## Governance
+* [MOJ Engineering AI Governance Framework](/documentation/governance/ai-governance-framework.html)
+
 ## Standards
 
 ### Operating services
