--- a/source/documentation/governance/tda-architectural-alignment.html.md.erb
+++ b/source/documentation/governance/tda-architectural-alignment.html.md.erb
@@ -1,1 +1,10 @@
+---
+owner_slack: "#tda-and-solution-surgery"
+title: TDA Submission Template - Architectural Alignment
+last_reviewed_on: 2025-12-12
+review_in: 3 months
+---
 
+# <%= current_page.data.title %>
+
+## Introduction
