--- a/source/documentation/governance/tda-data-alignment.html.md.erb
+++ b/source/documentation/governance/tda-data-alignment.html.md.erb
@@ -1,1 +1,11 @@
+---
+owner_slack: "#tda-and-solution-surgery"
+title: TDA Submission Template - Data Alignment
+last_reviewed_on: 2026-02-18
+review_in: 3 months
+---
+
+# <%= current_page.data.title %>
+
+## Introduction
 
