--- a/source/documentation/governance/tda-architectural-alignment.html.md.erb
+++ b/source/documentation/governance/tda-architectural-alignment.html.md.erb
@@ -9,14 +9,37 @@ review_in: 3 months
 
 ## Introduction
 
-This guidance has been designed to help project teams submitting proposals to the Technical Design Authority (TDA) using the [TDA Submission Template](https://justiceuk.sharepoint.com/:p:/r/sites/TechnicalDesignAuthority219/_layouts/15/Doc.aspx?sourcedoc=%7B82C7FC30-FDB4-4679-AD4E-BD5EDCEFD1A1%7D&file=TDA_Submission_Template_2.0.pptx&action=edit&mobileredirect=true). 
+This guidance has been designed to help project teams submitting proposals to the Technical Design Authority (TDA) using the [TDA Submission Template](https://justiceuk.sharepoint.com/:p:/r/sites/TechnicalDesignAuthority219/_layouts/15/Doc.aspx?sourcedoc=%7B82C7FC30-FDB4-4679-AD4E-BD5EDCEFD1A1%7D&file=TDA_Submission_Template_2.0.pptx&action=edit&mobileredirect=true).
 
-Teams are asked to supply details of how their proposal meets specified criteria in three areas - architecture, security and data. 
+Teams are asked to supply details of how their proposal meets specified criteria in three areas - architecture, security and data.
 
 This section contains information on each item listed the "Architectural Alignment" section of the presentation, and provides guidance by attempting to answer three questions.
 
-- **What** does the item mean in this context? 
+- **What** does the item mean in this context?
 
-- **Why** does the item need to be addressed? 
+- **Why** does the item need to be addressed?
 
-- **How** would a team go about meeting the item requirements? 
+- **How** would a team go about meeting the item requirements?
+
+
+## Re-use before Buy, buy before build 
+
+**What?** – Sharing and re-using existing resources (technology, data, services) is encouraged before purchasing any technology, and buying a technology solution is recommended before building from scratch. Benefits include avoiding duplication, speeding up the initial project phases and lowering costs. 
+
+Why - Your proposal needs to show you’ve considered whether you can share and re-use technology to comply with TCoP point 8.  
+
+To comply with TCoP point 11 your proposal must demonstrate  
+
+the user need/problem you need to solve 
+
+your decision process for building or buying any technology 
+
+how your proposal meets user needs and solves or mitigates your problem 
+
+how you’re following government contractual limitations 
+
+Your proposal should also include details on increasing sustainability to comply with TCoP point 12. 
+
+The spend control process requires you to demonstrate you are meeting the requirements for TCoP point 8 and TCoP point 11. 
+
+How? – Explore the potential for re-use and sharing technology in the guidance for TCoP point 8 and developing a purchasing strategy in TCoP point 11. Section 11 of the GOV.UK service standard also includes guidance on choosing the right tools and technology. 
