--- a/source/documentation/governance/tda-architectural-alignment.html.md.erb
+++ b/source/documentation/governance/tda-architectural-alignment.html.md.erb
@@ -59,7 +59,7 @@ The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spe
 **How?** – The [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard) contains details on how to develop a user-led solution. Your presentation should include information on any user research you’ve conducted, and the impact of the research on the proposal. 
 
 
-##Cloud First 
+## Cloud First 
 
 **What?** – Cloud computing should be the first data storage/retrieval solution considered for any proposal to the TDA.  
 
@@ -82,18 +82,18 @@ The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spe
 
 The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spend-controls-check-if-you-need-approval-to-spend-money-on-a-service) also requires you to demonstrate you are meeting the requirements for [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology). 
 
-**How?** – Review the guidance in point 11 of the GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology). Include information on keeping the range of technologies used to a minimum and explain why your solution may require the use of any innovative technologies not currently used within the organisation. 
+**How?** – Review the guidance in point 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 8](https://www.gov.uk/guidance/share-and-reuse-technology). Include information on keeping the range of technologies used to a minimum and explain why your solution may require the use of any innovative technologies not currently used within the organisation. 
 
 
 ## Manage obsolescence to reduce technical debt 
 
 **What?** – Any proposed solutions should outline the process and cost of replacing technology which has become obsolete, as well as the future cost of maintenance or re-work to minimise the build-up of technical debt.  
 
-**Why?** – To meet the requirements for [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology), your proposal needs to demonstrate how your solution will successfully replace any obsolete technology. To meet the requirements for TCoP point 11 you should also the effect of any replacement on your purchasing strategy.  
+**Why?** – To meet the requirements for [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology), your proposal needs to demonstrate how your solution will successfully replace any obsolete technology. To meet the requirements for [TCoP point 11](https://www.gov.uk/guidance/define-your-purchasing-strategy) you should also the effect of any replacement on your purchasing strategy.  
 
 The [spend control process](https://www.gov.uk/service-manual/agile-delivery/spend-controls-check-if-you-need-approval-to-spend-money-on-a-service) also requires you to demonstrate you are meeting the requirements for [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology). 
 
-**How?** – Review the guidance in point 11 of the GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology). Include information on replacing legacy technology in your proposal, demonstrating how it could reduce technical debt. 
+**How?** – Review the guidance in point 11 of the [GOV.UK service standard](https://www.gov.uk/service-manual/service-standard), as well as [TCoP point 9](https://www.gov.uk/guidance/integrate-and-adapt-technology). Include information on replacing legacy technology in your proposal, demonstrating how it could reduce technical debt. 
 
 
 ## Use open standards 
