Tda alignment criteria - architecture (#382)
* Create tda-architectural-alignment.html.md.erb

File created

* Create tda-security-alignment.html.md.erb

Create file

* Create tda-data-alignment.html.md.erb

Create file

* Update index.html.md.erb

Links for TDA Alignment Criteria added to Governance section

* Update index.html.md.erb

* Update tda-architectural-alignment.html.md.erb

Introduction added

* Update tda-data-alignment.html.md.erb

Introduction added

* Update tda-security-alignment.html.md.erb

Introduction added

* Update tda-architectural-alignment.html.md.erb

Introduction added

* Update tda-data-alignment.html.md.erb

Introduction added

* Update tda-security-alignment.html.md.erb

introduction added

* Update tda-architectural-alignment.html.md.erb

* Update tda-architectural-alignment.html.md.erb

Content uploaded and formatted.

* Update index.html.md.erb

* Update tda-architectural-alignment.html.md.erb

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -20,7 +20,10 @@ which covers service design more broadly.
 * [Frontend Development Principles](documentation/principles/frontend-development-principles.html)
 
 ## Governance
+
 * [MOJ Engineering AI Governance Framework](/documentation/governance/ai-governance-framework.html)
+
+* [TDA Submission Template - Architectural Alignment](/documentation/governance/tda-architectural-alignment.html)
 
 ## Standards
 
