Security Alignment link added

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -24,6 +24,7 @@ which covers service design more broadly.
 * [MOJ Engineering AI Governance Framework](/documentation/governance/ai-governance-framework.html)
 
 * [TDA Submission Template - Architectural Alignment](/documentation/governance/tda-architectural-alignment.html)
+* [TDA Submission Template - Security Alignment](/documentation/governance/tda-security-alignment.html) 
 
 ## Standards
 
