Fix typo in 'Security Alignment' section description

--- a/source/documentation/governance/tda-security-alignment.html.md.erb
+++ b/source/documentation/governance/tda-security-alignment.html.md.erb
@@ -13,7 +13,7 @@ This guidance has been designed to help project teams submitting proposals to th
 
 Teams are asked to supply details of how their proposal meets specified criteria in three areas - architecture, security and data.
 
-This section contains information on each item listed the "Security Alignment" section of the presentation, and provides guidance by attempting to answer three questions.
+This section contains information on each item listed in the "Security Alignment" section of the presentation, and provides guidance by attempting to answer three questions.
 
 - **What** does the item mean in this context?
 - **Why** does the item need to be addressed?
